--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.6.0",
+    "bitsandbytes>=0.45.5",
     "datasets>=3.6.0",
     "scikit-learn>=1.6.1",
     "torch>=2.7.0",
